# proyecto-compilacion

./: README.md  pyproject.toml
.github/workflows/: build.yml
